--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^5.5.6",
     "react": "^17.0.2",
     "react-card-carousel": "^1.1.3",
+    "react-cookie-consent": "^7.4.1",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
     "react-ig-feed": "^1.0.4",
